--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "tracky",
   "version": "1.0.0",
-  "description": "tracky.js is a helper streamlining user interaction into css-classes",
+  "description": "a helper module streamlining user interaction into css-classes",
   "main": "src/tracky.js",
   "scripts": {
-    "test": "gulp test:lint && gulp test:jasmine",
-    "compile": "webpack"
+    "test": "npm run test:eslint && npm run build:dev && npm run test:jasmine",
+    "test:eslint": "./node_modules/.bin/eslint ./src/**/*.js",
+    "test:jasmine": "./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=test/jasmine.json",
+    "build": "npm run build:prod && npm run build:dev",
+    "build:prod": "webpack --prod",
+    "build:dev": "webpack"
   },
   "repository": {
     "type": "git",
@@ -49,24 +53,11 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
-    "del": "^1.2.0",
+    "eslint": "^3.0.0",
     "expose-loader": "^0.7.1",
-    "gulp": "~3.8.11",
-    "gulp-babel": "^6.1.2",
-    "gulp-bump": "^0.3.1",
-    "gulp-concat": "~2.5.2",
-    "gulp-eslint": "^2.0.0",
-    "gulp-header": "~1.2.2",
-    "gulp-include": "^1.1.1",
-    "gulp-jasmine": "^2.4.0",
-    "gulp-jshint": "~1.11.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "~1.2.0",
-    "gulp-util": "~3.0.4",
-    "jasmine-reporters": "^2.2.0",
-    "jshint-stylish": "~2.0.0",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
+    "path": "^0.12.7",
     "webpack": "^1.13.1"
   },
   "dependencies": {
