--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "deep-assign": "^2.0.0"
+    "deep-assign": "^2.0.0",
+    "lodash.debounce": "^4.0.6"
   }
 }
