--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "a helper module streamlining user interaction into css-classes",
   "main": "src/tracky.js",
   "scripts": {
-    "test": "npm run test:eslint && npm run build:dev && npm run test:jasmine",
+    "test": "npm run test:eslint && npm run build:dev && npm run test:jasmine && npm run test:istanbul && npm run test:istanbul:cleanup",
     "test:local": "npm run test:eslint && npm run build:dev && npm run test:jasmine:formatted",
     "test:eslint": "./node_modules/.bin/eslint ./src/**/*.js",
     "test:jasmine": "./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=test/jasmine.json",
+    "test:istanbul": "./node_modules/.bin/istanbul cover test/jasmine/jasmine.js",
+    "test:istanbul:cleanup": "rm -rf ./coverage",
     "test:jasmine:formatted": "node ./test/jasmine/jasmine.js",
     "build": "npm run build:prod && npm run build:dev",
     "build:prod": "webpack --prod",
@@ -57,6 +59,7 @@
     "babel-preset-es2015": "^6.9.0",
     "eslint": "^3.0.0",
     "expose-loader": "^0.7.1",
+    "istanbul": "^0.4.4",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.5.0",
