--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,6 +3,14 @@ Ruby: false
 Python: false
 PHP: false
 
+engines:
+  eslint:
+    enabled: true
+
+ratings:
+   paths:
+   - "**.js"
+
 exclude_paths:
 - test/**/*
 - docs/**/*
