--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "babel": {},
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-preset-stage-0": "^6.5.0",
     "browserify": "^13.0.1",
     "eslint": "^3.0.0",
     "istanbul": "^0.4.4",
