--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "tracky",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "a helper module streamlining user interaction into css-classes",
-  "main": "src/tracky.js",
+  "main": "index.js",
   "scripts": {
-    "test": "npm run test:eslint && npm run build:dev && npm run test:jasmine && npm run test:istanbul && npm run test:istanbul:cleanup",
-    "test:local": "npm run test:eslint && npm run build:dev && npm run test:jasmine:formatted",
+    "test": "npm run test:eslint && npm run build && npm run test:jasmine && npm run test:istanbul && npm run test:istanbul:cleanup",
+    "test:local": "npm run test:eslint && npm run build && npm run test:jasmine:formatted",
     "test:eslint": "./node_modules/.bin/eslint ./src/**/*.js",
     "test:jasmine": "./node_modules/.bin/jasmine JASMINE_CONFIG_PATH=test/jasmine.json",
     "test:istanbul": "./node_modules/.bin/istanbul cover test/jasmine/jasmine.js",
     "test:istanbul:cleanup": "rm -rf ./coverage",
     "test:jasmine:formatted": "node ./test/jasmine/jasmine.js",
-    "build": "npm run build:prod && npm run build:dev",
-    "build:prod": "webpack --prod",
-    "build:dev": "webpack"
+    "build": "npm run build:babel && npm run build:browserify && npm run build:uglify",
+    "build:babel": "./node_modules/.bin/babel --presets es2015,stage-0 -d dist/node/ src/",
+    "build:browserify": "./node_modules/.bin/browserify index.js -o dist/tracky.js -s Tracky",
+    "build:uglify": "./node_modules/.bin/uglifyjs  dist/tracky.js --output dist/tracky.min.js --compress --mangle --screw-ie8"
   },
   "repository": {
     "type": "git",
@@ -44,27 +45,18 @@
   "engines": {
     "node": ">= 0.9"
   },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "add-module-exports"
-    ]
-  },
+  "babel": {},
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-cli": "^6.10.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "browserify": "^13.0.1",
     "eslint": "^3.0.0",
-    "expose-loader": "^0.7.1",
     "istanbul": "^0.4.4",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.5.0",
     "path": "^0.12.7",
-    "webpack": "^1.13.1"
+    "uglify-js": "^2.7.0"
   },
   "dependencies": {
     "deep-assign": "^2.0.0",
