--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,10 @@
   "rules": {
     "indent": [
       2,
-      2
+      2,
+      {
+        "SwitchCase" : 1
+      }
     ],
     "quotes": [
       2,
