--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
   },
   "homepage": "https://github.com/wildhaber/tracky#readme",
   "engines": {
-    "node": ">= 0.9"
+    "node": ">= 4.0"
   },
   "babel": {},
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
     "browserify": "^13.0.1",
     "eslint": "^3.0.0",
